<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="help">Help</string>
    <string name="help_title">KUKA youBot Android App</string>
    <string name="help_text">
    	KUKA youBot Android App provide an alternative user interface (UI) for 
    	controlling youBot. Unlike "button-type" controller (joypad or keyboard), Android accommodate UI design. 
    	Therefore, an intuitive and user friendly controller for KUKA youBot Android can be developed.    	
    </string>
    <string name="help_connection_text">
    	KUKA youBot Android App uses RFCOMM Bluetooth connection where Android phone act as the client and 
    	youBotAndroid act as the server. youBotandroid is another program which can be run 
    	on a machine that is connected to KUKA youBot or KUKA youBot PC. youBot API are implemented in 
    	youBotAndroid. Pairing process should be performed before running youBotAndroid.
    </string>
    <string name="help_controller_text">
		Currently, android App can control base and arm of KUKA youBot separately.
		There are 2 ways to control the arm movement (joint position and joint velocity) and 5 modes
		to control the base movement (Shift, Drive, Accel, Slider and Cartesian).
    </string>
    
    <string name="copyright_text_landscape">
    Copyright (c) 2011 - All rights reserved. \n
 	Hochschule Bonn-Rhein-Sieg - University of Applied Sciences. \n
	Computer Science Department.
    </string>
    
    <string name="copyright_text_portrait">
    Copyright (c) 2011. \n
    All rights reserved. \n
 	Hochschule Bonn-Rhein-Sieg. \n
 	University of Applied Sciences. \n
	Computer Science Department. 
    </string>
    
    <string name="about">About...</string>
    <string name="title">KUKA youBot App</string>
    <string name="controller">Controller</string>
    <string name="base_movement">Base movement :</string>
    <string name="manipulator">Manipulator</string>
    <string name="app_name">youBot</string>
    <string name="select_device">Select Device</string>
    <string name="main_menu">Main menu</string>
    <string name="select_controller_mode">controller mode</string>
    <string name="base_controller">Base Controller</string>
    <string name="controller_switch_mode">Switch mode</string>
	<string name="quit">..Quit..</string>
	
	<string name="arm_controller">Arm Controller</string>
	<string name="joint_velocity">Joint Velocity</string>
	<string name="joint_position">Joint Position</string>  
	<string name="pose">Pose</string>  
	    
	<string name="stop_base">Stop</string>
	<string name="velocity">Velocity</string>
	<string name="steering_angle">Steering Angle</string>
	
	<string name="longitudinal">Longitudinal</string>
	<string name="transversal">Transversal</string>
	<string name="angular">Angular</string>
	
	<string name="forward">FORWARD</string>
	<string name="left">LEFT</string>
	<string name="right">RIGHT</string>
	<string name="backward">BACKWARD</string>
	<string name="CCW">CCW</string>
	<string name="CW">CW</string>
	
	<string name="on">On</string>
	<string name="off">Off</string>

	<string name="open">Open</string>
	<string name="close">Close</string>
	
	<string name="connect">Connect</string>
	<string name="connection">Connection</string>
	<string name="connect_bluetooth">Bluetooth</string>
	<string name="bluetooth_note">"important note : Pairing process with YouBot device should be executed BEFORE running YouBot API and running Android Controller GUI"</string>
	<string name="connect_wireless">Wireless</string>
	<string name="no_paired_device">No paired device</string>
	<string name="text_paired_devices">PAIRED DEVICE</string>
	<string name="text_new_devices">FOUND DEVICE</string>
	
	<string name="scan_devices">Scan</string>
	<string name="scanning_devices">Scanning...</string>
	<string name="available_devices">Available Devices</string>
	<string name="no_found_device">No new device</string>
	
	<!-- Controller Mode -->
	<string name="controller_simple">Shift mode</string>
	<string name="controller_normal">Drive mode</string>
	<string name="controller_accel">Accel mode</string>
	<string name="controller_slider">Slider mode</string>
	<string name="controller_cartesian">Cartesian mode</string>
	
	<!-- Manipulator Mode -->
	<string name="joint_1">Joint 1</string>
	<string name="joint_2">Joint 2</string>
	<string name="joint_3">Joint 3</string>
	<string name="joint_4">Joint 4</string>
	<string name="joint_5">Joint 5</string>
	<string name="stop">Stop</string>
	
	<!-- Motion Profile -->
	<string name="start">Start</string>
	<string name="move">Move</string>
	<string name="motion_profile">Motion Profile</string>
	
	<!-- arm joint position -->
	<string name="radian">Radian</string>
	<string name="degree">Degree</string>
	<string name="send">Send</string>
	<string name="arm_joint_position">Arm Joint Position</string>
	<string name="arm_joint_velocity">Arm Joint Velocity</string>
	<string name="joint_position_mode">Joint Position Mode</string>
	
	<!-- arm joint position -->
	<string name="arm_folded_pose">Folded</string>
	<string name="arm_pose">Arm Pose</string>
	<string name="arm_candle_pose">Candle</string>
	<string name="arm_maze_pose">Maze</string>
	<string name="arm_pick_up_plate_pose">Pick Up Plate</string>
	<string name="arm_zigzag_up_pose">Zigzag Up</string>
	<string name="arm_zigzag_forward_pose">Zigzag Forward</string>
	<string name="arm_pick_up_left_pose">Pick Up Left</string>
	<string name="arm_pick_up_right_pose">Pick Up Right</string>
	<string name="arm_pick_up_front_pose">Pick Up Front</string>
	
	<string name="arm_joint_position_help_text">
	    Arm joint position allows user to move youBot arm into a pose that are define through its joint angles (in radian or degree).
	    After the desired joint angles are set, the values can be send to android pc client which will move the arm to its designated pose.
	    The values are limited based on youBot arm joint limit.
	    </string>
	 
	<string name="arm_joint_velocity_help_text">
	    Arm joint velocity allows user to rotate a joint or joints of the KUKA youBot arm.
	    Moving a slider to the right side will rotate the corresponding joint to positive direction.
	    It is possible to rotate several joints at the same time.
	    It should be noted that trying to rotate a joint outside its joint range is not recommended.
	    </string>
	    
	 <!-- maze game -->
	 <string name="maze">Maze Game</string>
	 <string name="game_start">Start Game</string>
	 <string name="game_stop">Stop Game</string>
	 <string name="play">Play</string>
	 <string name="reset_pose">Reset Pose</string>
	 <string name="gripper">Gripper:</string>
	 
	 <string name="game_sensitivity">Game Sensitivity:</string>
	 <string name="cartesian_mode">Ctartesian</string>
	 <string name="accel_mode">Accel</string>
	 
	 <string name="x">X</string>
	 <string name="y">Y</string>
	 <string name="invert">Invert</string>
</resources>


