<?xml version="1.0" encoding="UTF-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="20dip">
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation = "vertical"
		android:padding="5dip">
		<TextView
			android:layout_width ="wrap_content"
			android:layout_height="wrap_content"
			android:text = "@string/about"
			android:paddingTop = "5dip"
			android:textSize="15dip"
			android:textStyle="bold"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/help_text"
			android:textSize="15dip"/>
		<TextView
			android:layout_width ="wrap_content"
			android:layout_height="wrap_content"
			android:text = "@string/connection"
			android:paddingTop = "10dip"
			android:textSize="15dip"
			android:textStyle="bold"/>
		<TextView
			android:layout_width ="wrap_content"
			android:layout_height="wrap_content"
			android:text = "@string/help_connection_text"
			android:textSize="15dip"/>
		<TextView
			android:layout_width ="wrap_content"
			android:layout_height="wrap_content"
			android:text = "@string/controller"
			android:paddingTop = "10dip"
			android:textSize="15dip"
			android:textStyle="bold"/>
		<TextView
			android:layout_width ="wrap_content"
			android:layout_height="wrap_content"
			android:text = "@string/help_controller_text"
			android:textSize="15dip"/>
	</LinearLayout>
</ScrollView>