<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="20dip">
	<TextView android:text="@string/base_controller"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:padding="20dip"
		android:textSize="15sp"/>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingBottom="10dip">
		<TextView android:text="@string/base_movement"
			android:layout_width = "fill_parent"
			android:layout_weight="1"
			android:layout_height= "wrap_content"/>
		<TextView android:id="@+id/base_movement_text"
			android:layout_width = "fill_parent"
			android:layout_weight="1"
			android:gravity="right"
			android:layout_height= "wrap_content"/>
	</LinearLayout>
		<LinearLayout
			android:layout_width = "280dip"
			android:layout_height = "wrap_content"
			android:orientation="vertical"
			android:padding = "40dip">
			<ImageView
				android:id= "@+id/accel_animation"
				android:layout_gravity = "center"
				android:layout_width = "50dip"
				android:layout_height = "50dip">
			</ImageView>
		</LinearLayout>
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="10dip">
		<SeekBar
		  android:padding="15dip"
		  android:id="@+id/slider_angular"
		  android:layout_width="300dip"
		  android:layout_gravity="center"
		  android:layout_height="wrap_content"
		  android:max="10"
		  android:progress="5"
		  android:secondaryProgress="5"
		  android:progressDrawable="@drawable/slider_main"
		  android:thumb="@drawable/slider" />
		<TextView android:text="@string/angular"
		  android:gravity="left"
		  android:layout_width = "fill_parent"
		  android:layout_height= "wrap_content"/>
	</RelativeLayout>
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="90dip">
		<ToggleButton
			android:layout_width = "100dip"
			android:layout_height = "wrap_content"
			android:layout_gravity = "left"
			android:gravity = "center"
			android:id="@+id/accel_button"
			android:textOn = "@string/on"
			android:textOff = "@string/off">
		</ToggleButton>
	</LinearLayout>
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		android:orientation="horizontal"
		android:paddingTop= "20dip">	
		<LinearLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<Button	android:id="@+id/stop_base_button"
				android:text="@string/stop_base"
				android:textSize="15sp"
				android:layout_height="wrap_content"
				android:layout_width="140dip"/>
			<Button android:id="@+id/return_main_menu"
				android:text="@string/main_menu"
				android:textSize="15sp"
				android:layout_height="wrap_content"
				android:layout_width="140dip"/>
		</LinearLayout>
		<LinearLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<Button	android:id="@+id/connect_button"
				android:text="@string/connect"
				android:textSize="15sp"
				android:layout_height="wrap_content"
				android:layout_width="140dip"/>
			<Button	android:id="@+id/switch_controller"
				android:text="@string/controller_switch_mode"
				android:textSize="15sp"
				android:layout_height="wrap_content"
				android:layout_width="140dip"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>