<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="20dip">
	<TextView android:text="@string/base_controller"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:padding="20dip"
		android:textSize="15sp"/>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingBottom="10dip">
		<TextView android:text="@string/base_movement"
			android:layout_width = "fill_parent"
			android:layout_weight="1"
			android:layout_height= "wrap_content"/>
		<TextView android:id="@+id/base_movement_text"
			android:layout_width = "fill_parent"
			android:layout_weight="1"
			android:gravity="right"
			android:layout_height= "wrap_content"/>
	</LinearLayout>
	<LinearLayout
	  android:layout_width="250dip"
	  android:layout_height="250dip">
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<SeekBar
		  android:paddingLeft="50dip"
		  android:paddingRight="10dip"
		  android:id="@+id/slider_angular"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content"
		  android:progressDrawable="@drawable/slider_main"
		  android:thumb="@drawable/slider" />
		<TextView android:text="@string/angular"
		  android:gravity="right"
		  android:paddingRight="10dip"
		  android:paddingTop="45dip"
		  android:layout_width = "fill_parent"
		  android:layout_height= "wrap_content"/> 
		<RelativeLayout
			android:layout_height="fill_parent"
			android:paddingTop="50dip"
			android:layout_width="wrap_content">
			<com.rhama.youbot.VerticalSeekBar
		 	android:progressDrawable="@drawable/slider_main_vertical"
	      	android:layout_height="200dip"
	      	android:layout_width="38dip"
	      	android:id="@+id/slider_longitudinal" 
	      	android:thumb="@drawable/slider_vertical" />  
		</RelativeLayout>
		<TextView android:text="@string/longitudinal"
		  android:gravity="bottom"
		  android:paddingLeft="45dip"
		  android:layout_width = "fill_parent"
		  android:layout_height= "fill_parent"/>
		<RelativeLayout
		  android:paddingLeft="45dip"
		  android:paddingTop="50dip"
		  android:layout_width = "fill_parent"
		  android:layout_height= "fill_parent">
				<FrameLayout
					android:id="@+id/main_controller"
					android:layout_width="200dip"
					android:layout_height="200dip">
				</FrameLayout>
		</RelativeLayout> 
	  </RelativeLayout>
	</LinearLayout>
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		android:orientation="horizontal"
		android:paddingTop= "40dip">	
		<LinearLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<Button	android:id="@+id/stop_base_button"
				android:text="@string/stop_base"
				android:textSize="15sp"
				android:layout_height="wrap_content"
				android:layout_width="140dip"/>
			<Button android:id="@+id/return_main_menu"
				android:text="@string/main_menu"
				android:textSize="15sp"
				android:layout_height="wrap_content"
				android:layout_width="140dip"/>
		</LinearLayout>
		<LinearLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<Button	android:id="@+id/connect_button"
				android:text="@string/connect"
				android:textSize="15sp"
				android:layout_height="wrap_content"
				android:layout_width="140dip"/>
			<Button	android:id="@+id/switch_controller"
				android:text="@string/controller_switch_mode"
				android:textSize="15sp"
				android:layout_height="wrap_content"
				android:layout_width="140dip"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>