<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/controller_normal"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding = "20dip">
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingBottom="10dip">
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/arm_pose"
		    android:textSize="20sp" />
		<ImageView
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:paddingLeft="150dip"
	        android:visibility="gone"
	        android:scaleType="fitStart"
	        android:src="@drawable/help00" 
	        android:id= "@+id/help_button" />
	</LinearLayout>
	
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="10dip"
		android:paddingBottom="10dip"/>
	
	<Button 
	    	android:id = "@+id/arm_maze_pose_button"
	    	android:text = "@string/arm_maze_pose"
	    	android:layout_width = "150dip"
	    	android:layout_height = "wrap_content"
	    	android:textSize = "20sp"/>
	
	<View android:layout_width="fill_parent"
		android:layout_height="10dip"/>
	
	<Button 
	    	android:id = "@+id/arm_candle_pose_button"
	    	android:text = "@string/arm_candle_pose"
	    	android:layout_width = "150dip"
	    	android:layout_height = "wrap_content"
	    	android:textSize = "20sp"/>
	
	<View android:layout_width="fill_parent"
		android:layout_height="10dip"/>
	
	<Button 
	    	android:id = "@+id/arm_pick_up_pose_button"
	    	android:text = "@string/arm_pick_up_pose"
	    	android:layout_width = "150dip"
	    	android:layout_height = "wrap_content"
	    	android:textSize = "20sp"/>
	
	<View android:layout_width="fill_parent"
		android:layout_height="10dip"/>
	
	<Button 
	    	android:id = "@+id/arm_folded_pose_button"
	    	android:text = "@string/arm_folded_pose"
	    	android:layout_width = "150dip"
	    	android:layout_height = "wrap_content"
	    	android:textSize = "20sp"/>
	
</LinearLayout>