<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/controller_normal"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding = "20dip">
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingBottom="10dip">
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/arm_joint_velocity"
		    android:textSize="20dip" />
		<ImageView
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:paddingLeft="80dip"
	        android:scaleType="fitStart"
	        android:src="@drawable/help00" 
	        android:id= "@+id/help_button" />
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingTop="10dip"
			android:orientation="horizontal">
			<TextView android:text="@string/joint_1"
				android:gravity="center_vertical"
				android:layout_width = "wrap_content"
				android:textSize = "20dip"
				android:layout_height= "fill_parent"/>
			<SeekBar
			  android:id="@+id/slider_joint_1"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:paddingLeft="10dip"
			  android:paddingRight="10dip"
			  android:progressDrawable="@drawable/slider_main"
			  android:thumb="@drawable/slider" />
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingTop="10dip"
			android:orientation="horizontal">
			<TextView android:text="@string/joint_2"
				android:gravity="center_vertical"
				android:layout_width = "wrap_content"
				android:textSize = "20dip"
				android:layout_height= "fill_parent"/>
			<SeekBar
			  android:id="@+id/slider_joint_2"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:paddingLeft="10dip"
			  android:paddingRight="10dip"
			  android:progressDrawable="@drawable/slider_main"
			  android:thumb="@drawable/slider" />
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingTop="10dip"
			android:orientation="horizontal">
			<TextView android:text="@string/joint_3"
				android:gravity="center_vertical"
				android:layout_width = "wrap_content"
				android:textSize = "20dip"
				android:layout_height= "fill_parent"/>
			<SeekBar
			  android:id="@+id/slider_joint_3"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:paddingLeft="10dip"
			  android:paddingRight="10dip"
			  android:progressDrawable="@drawable/slider_main"
			  android:thumb="@drawable/slider" />
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingTop="10dip"
			android:orientation="horizontal">
			<TextView android:text="@string/joint_4"
				android:gravity="center_vertical"
				android:layout_width = "wrap_content"
				android:textSize = "20dip"
				android:layout_height= "fill_parent"/>
			<SeekBar
			  android:id="@+id/slider_joint_4"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:paddingLeft="10dip"
			  android:paddingRight="10dip"
			  android:progressDrawable="@drawable/slider_main"
			  android:thumb="@drawable/slider" />
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingTop="10dip"
			android:orientation="horizontal">
			<TextView android:text="@string/joint_5"
				android:gravity="center_vertical"
				android:layout_width = "wrap_content"
				android:textSize = "20dip"
				android:layout_height= "fill_parent"/>
			<SeekBar
			  android:id="@+id/slider_joint_5"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:paddingLeft="10dip"
			  android:paddingRight="10dip"
			  android:progressDrawable="@drawable/slider_main"
			  android:thumb="@drawable/slider" />
		</LinearLayout>
	</LinearLayout>
	<LinearLayout android:layout_width="wrap_content"
			android:paddingTop = "30dip"
			android:layout_height="fill_parent"
			android:gravity = "bottom"
			android:orientation="horizontal">
			<Button
				android:id="@+id/stop_button"
				android:text="@string/stop"
				android:textSize="15dip"
				android:layout_height="wrap_content"
				android:layout_width="150dip"
				android:layout_weight="1"/>
			<Button
				android:id="@+id/change_mode"
				android:text="@string/controller_switch_mode"
				android:textSize="15dip"
				android:layout_height="wrap_content"
				android:layout_width="150dip"
				android:layout_weight="1"/>
		</LinearLayout>
</LinearLayout>