<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/connect_bluetooth"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingRight="20dip"
	android:paddingLeft="20dip"
	android:paddingTop="20dip"
	android:paddingBottom="20dip">
	<TextView android:text = "@string/bluetooth_note" 
		android:layout_width = "fill_parent"
		android:layout_height = "wrap_content"
		android:textStyle = "italic"
		android:gravity ="top"
		android:paddingBottom="10dip"/>
    <LinearLayout android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="10dip">
		    <Button android:id="@+id/bluetooth_button"
			    android:text="@string/scan_devices"
			    android:layout_height="wrap_content"
			   	android:layout_width="140dip"
			   	android:gravity="center_vertical"
			  	android:paddingLeft = "20dip" 
			   	android:textSize="15dip" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
   		<TextView android:id="@+id/title_paired_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_paired_devices"
        android:background="#666"
        android:textColor="#FFF"
        android:textSize="15dip"
        android:paddingLeft="20dp"    />   
    	<ListView android:id="@+id/paired_devices"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stackFromBottom="False"
        android:layout_weight="1"    />
   		<TextView android:id="@+id/title_new_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_new_devices"
        android:background="#666"
        android:textColor="#FFF"
        android:textSize="15dip"
        android:paddingLeft="20dp"/>
    	<ListView android:id="@+id/new_devices"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stackFromBottom="false"
        android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>

 
