<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/controller_normal"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:padding = "20dip">

	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="5dip" >

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="5dip"
	        android:text="@string/arm_joint_velocity"
	        android:textSize="15dip"
	        android:textStyle="bold" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/arm_joint_velocity_help_text"
	        android:textSize="15dip" />

	    <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingRight="10dip"
	        android:src="@drawable/joint_rotation" />
	</LinearLayout>

</LinearLayout>